Writing apis.yml

--- a/apis.yml
+++ b/apis.yml
@@ -1,27 +1,16 @@
 aid: substance-abuse-and-mental-health-services-administration
-name: Substance Abuse and Mental Health Services Administration
-description: >-
-  November is National Homelessness Awareness Month and National Homeless Youth
-  Awareness Month. SAMHSA works in partnership with federal, state and local
-  partners and national experts to provide training on housing, treatment and
-  recovery models focused on adults, children, and families who are experiencing
-  or at risk of homelessness and have serious mental illness and/or serious
-  emotional ...
-type: Index
-position: Consumer
-access: 3rd-Party
-image: https://kinlane-productions.s3.amazonaws.com/apis-json/apis-json-logo.jpg
-tags:
-  - API
-created: '2024-12-03'
-modified: '2024-12-03'
 url: >-
   https://raw.githubusercontent.com/api-evangelist/substance-abuse-and-mental-health-services-administration/refs/heads/main/apis.yml
-specificationVersion: '0.19'
 apis:
   - aid: >-
       substance-abuse-and-mental-health-services-administration:substance-abuse-and-mental-health-services-administration
     name: Substance Abuse and Mental Health Services Administration
+    tags:
+      - API
+    humanURL: https://www.samhsa.gov
+    properties:
+      - url: https://www.samhsa.gov
+        type: Documentation
     description: >-
       November is National Homelessness Awareness Month and National Homeless
       Youth Awareness Month. SAMHSA works in partnership with federal, state and
@@ -29,12 +18,28 @@ apis:
       treatment and recovery models focused on adults, children, and families
       who are experiencing or at risk of homelessness and have serious mental
       illness and/or serious emotional ...
-    humanURL: https://www.samhsa.gov
-    tags:
-      - API
-    properties:
-      - type: Documentation
-        url: https://www.samhsa.gov
+name: Substance Abuse and Mental Health Services Administration
+tags:
+  - Federal Government
+type: Contract
+image: https://kinlane-productions.s3.amazonaws.com/apis-json/apis-json-logo.jpg
+access: 3rd-Party
+created: '2024-12-03'
+modified: '2025-01-03'
+position: Consuming
+description: >-
+  The Substance Abuse and Mental Health Services Administration (SAMHSA) is a
+  branch of the U.S. Department of Health and Human Services dedicated to
+  improving the quality and availability of prevention, treatment, and recovery
+  support services for individuals struggling with substance abuse and mental
+  health disorders. SAMHSA works to increase awareness and understanding of the
+  issues surrounding mental health and substance abuse, provide resources and
+  support to those in need, and promote policies and programs that address the
+  unique challenges faced by individuals dealing with these conditions. Through
+  grants, research, training, and outreach programs, SAMHSA aims to reduce the
+  impact of mental illness and addiction on individuals, families, and
+  communities across the nation.
 maintainers:
   - FN: Kin Lane
     email: info@apievangelist.com
+specificationVersion: '0.19'
